[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = ""
authors = ["Martin Miglio <marmig0404@gmail.com>"]
readme = "README.md"
packages = [{include = "pathfinder"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
graphics-py = "^5.0.1.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
prospector = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pathfinder = "pathfinder.__main__:main"
